--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dalreacto-boilerplate",
-  "version": "1.0.0",
-  "description": "",
+  "name": "dalbinaco.com",
+  "version": "0.1.0",
+  "description": "Personal website",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --port 8000 --content-base dist/",
