--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "devDependencies": {
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "node-sass": "^4.5.1",
     "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.0"
+    "style-loader": "^0.16.0",
+    "url-loader": "^0.5.8"
   }
 }
