--- a/package.json
+++ b/package.json
@@ -4,34 +4,34 @@
   "description": "Personal website",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --port 8000 --content-base dist/",
+    "start": "webpack-dev-server --port 8000 --content-base dist/ --history-api-fallback",
     "build": "webpack -p"
   },
   "author": "DALBINACO",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.6.2",
+    "express": "^4.15.2",
+    "if-env": "^1.0.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.x.x"
+  },
+  "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "bootstrap": "^4.0.0-alpha.6",
-    "express": "^4.15.2",
-    "express-graphql": "^0.6.3",
-    "graphql": "^0.9.1",
-    "html-webpack-plugin": "^2.28.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^3.x.x",
-    "webpack": "^2.3.1",
-    "webpack-dev-server": "^2.4.2"
-  },
-  "devDependencies": {
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
     "node-sass": "^4.5.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.0",
-    "url-loader": "^0.5.8"
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.1",
+    "webpack-dev-server": "^2.4.2"
   }
 }
