--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:dev": "webpack-dev-server --inline --content-base dist/ --history-api-fallback",
-    "start:prod": "webpack && node server.js"
+    "start:prod": "webpack && node server.js",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress"
   },
   "author": "DALBINACO",
   "license": "ISC",
