--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "if-env": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-ga": "^2.1.2",
     "react-router": "^3.x.x"
   },
   "devDependencies": {
