--- a/package.json
+++ b/package.json
@@ -1,42 +1,27 @@
 {
   "name": "dalbinaco.com",
-  "version": "0.1.0",
-  "engines": {
-    "node": "7.3.0"
-  },
   "description": "Personal website",
-  "main": "index.js",
-  "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --inline --content-base dist/ --history-api-fallback",
-    "start:prod": "webpack && node server.js"
-  },
-  "author": "DALBINACO",
-  "license": "ISC",
+  "version": "0.2.0",
+  "author": "Mateus Dal Bianco <mateus@dalbinaco.com>",
   "dependencies": {
-    "compression": "^1.6.2",
-    "express": "^4.15.2",
-    "if-env": "^1.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-ga": "^2.1.2",
-    "react-router": "^3.x.x"
+    "bootstrap": "4.0.0-beta",
+    "gatsby": "^1.9.36",
+    "gatsby-link": "^1.6.15",
+    "gatsby-plugin-react-helmet": "^1.0.5",
+    "gatsby-plugin-sass": "^1.0.12"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "main": "n/a",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write 'src/**/*.js'",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "bootstrap": "^4.0.0-alpha.6",
-    "css-loader": "^0.27.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
-    "node-sass": "^4.5.1",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.16.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.1",
-    "webpack-dev-server": "^2.4.2"
+    "prettier": "^1.6.1"
   }
 }
