--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "gatsby": "^1.9.36",
     "gatsby-link": "^1.6.15",
     "gatsby-plugin-react-helmet": "^1.0.5",
-    "gatsby-plugin-sass": "^1.0.12"
+    "gatsby-plugin-sass": "^1.0.12",
+    "gh-pages": "^1.0.0"
   },
   "keywords": [
     "gatsby"
