--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "4.0.0-beta",
     "gatsby": "^1.9.36",
     "gatsby-link": "^1.6.15",
+    "gatsby-plugin-google-analytics": "^1.0.7",
     "gatsby-plugin-react-helmet": "^1.0.5",
     "gatsby-plugin-sass": "^1.0.12",
     "gh-pages": "^1.0.0"
