--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gatsby-plugin-google-analytics": "^1.0.7",
     "gatsby-plugin-react-helmet": "^1.0.5",
     "gatsby-plugin-sass": "^1.0.12",
-    "gh-pages": "^1.0.0"
+    "gh-pages": "^1.0.0",
+    "react-typist": "^2.0.4",
+    "typed.js": "^2.0.6"
   },
   "keywords": [
     "gatsby"
