--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dalbinaco.com",
+  "name": "dlbn.co",
   "description": "Personal website",
   "version": "0.2.0",
   "author": "Mateus Dal Bianco <mateus@dalbinaco.com>",
