--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.12",
     "gh-pages": "^1.0.0",
+    "react-helmet": "^5.2.0",
     "react-intl": "^2.4.0",
     "react-typist": "^2.0.4",
     "typed.js": "^2.0.6"
