--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "4.0.0-beta",
-    "gatsby": "^1.9.36",
+    "gatsby": "^1.9.183",
     "gatsby-link": "^1.6.15",
     "gatsby-plugin-google-analytics": "^1.0.7",
     "gatsby-plugin-i18n": "^0.4.1",
@@ -15,6 +15,7 @@
     "gh-pages": "^1.0.0",
     "react-helmet": "^5.2.0",
     "react-intl": "^2.4.0",
+    "react-simple-icons": "^1.0.0-beta.5",
     "react-typist": "^2.0.4",
     "typed.js": "^2.0.6"
   },
