--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.2.0",
   "author": "Mateus Dal Bianco <mateus@dalbinaco.com>",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0-beta.46",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "bootstrap": "4.0.0-beta",
